sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: '<-' expected but '=' found.
	for (x=false 
              ^AlgBubbleSort2:12: error: illegal start of simple expression
}}
 ^