sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	var x:Boolean=false
	for (x=false 
	i<- 0 to getNombreValeurs()-2){
		for (j<-0 to i){
			if (plusPetit(j:Int,j+1:Int)=false){
				echange(j,j+1)
				x=true
			}
		}
}}
